--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".config/nvim"]
-	path = .config/nvim
+	path = nvim/.config/nvim
 	url = https://github.com/paul-m-kim/kickstart-modular.nvim.git
