add some more ssh configs.

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,22 +1,36 @@
 Host vm-rmsv
-	HostName 20.57.185.3
-	User azureuser
-	IdentityFile ~/.ssh/vm-rmsv_key.pem
+	HostName=20.57.185.3
+	Port=22
+	User=azureuser
 	StrictHostKeyChecking=no
-	AddKeysToAgent yes
-	IdentitiesOnly=yes
-	ForwardX11=yes
-	ForwardX11Trusted=yes
+	AddKeysToAgent=yes
+	IdentityFile=~/.ssh/vm-rmsv_key.pem
+	UserKnownHostsFile=/dev/null
 
 # ./1azureagent1/.
 Host azureagent1
-	HostName localhost
-	Port 6767
-	User corvus
-	IdentityFile ~/.ssh/pkim
-	ProxyJump vm-rmsv
+	HostName=localhost
+	Port=6767
+	User=corvus
 	StrictHostKeyChecking=no
-	AddKeysToAgent yes
+	IdentityFile='~/.ssh/pkim'
+	IdentitiesOnly=yes
+	ProxyJump=vm-rmsv
+	UserKnownHostsFile=/dev/null
+
+# ./1ansible-deployer/.
+Host ansible
+	HostName='ansible-deployer.local'
+	Port=22
+	User=corvus
+	AddKeysToAgent=yes
+	StrictHostKeyChecking=no
+	IdentityFile='~/.ssh/pkim'
+	IdentitiesOnly=yes
+	ForwardX11=yes
+	ForwardX11Trusted=yes
+	ProxyJump azureagent1
+	UserKnownHostsFile=/dev/null
 
 Host shp
 	HostName 10.10.30.20
