change to linux convention from windows.

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -15,6 +15,8 @@ Host azureagent1
 	StrictHostKeyChecking=no
 	IdentityFile='~/.ssh/pkim'
 	IdentitiesOnly=yes
+	ForwardX11=yes
+	ForwardX11Trusted=yes
 	ProxyJump=vm-rmsv
 	UserKnownHostsFile=/dev/null
 
@@ -36,7 +38,7 @@ Host shp
 	HostName 10.10.30.20
 	Port 22
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	ProxyJump azureagent1
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
@@ -52,7 +54,7 @@ Host bbp
 	HostName 10.10.30.22
 	Port 22
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	ProxyJump azureagent1
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
@@ -61,7 +63,7 @@ Host bb-11p
 	HostName localhost
 	Port 31001
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/SIA00000001-PCM1.pem
@@ -74,7 +76,7 @@ Host bb-12p
 	HostName localhost
 	Port 31002
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/SIA00000001-PCM2.pem
@@ -87,7 +89,7 @@ Host bb-21p
 	HostName localhost
 	Port 31003
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/SIA00000007-PCM1.pem
@@ -100,7 +102,7 @@ Host bb-22p
 	HostName localhost
 	Port 31004
 	User corvus
-	UserKnownHostsFile=NUL
+	UserKnownHostsFile=/dev/null
 	StrictHostKeyChecking=no
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/SIA00000007-PCM2.pem
@@ -109,3 +111,25 @@ Host bb-22p
 	ForwardX11=yes
 	ForwardX11Trusted=yes
 
+
+Host d2-8-1
+	HostName localhost
+	Port 8001
+	User corvus
+	UserKnownHostsFile=/dev/null
+	StrictHostKeyChecking=no
+	AddKeysToAgent yes
+	IdentityFile ~/.ssh/SIA00000008-PCM1
+	IdentitiesOnly=yes
+	ProxyJump vm-rmsv
+
+Host d2-8-2
+	HostName localhost
+	Port 8002
+	User corvus
+	UserKnownHostsFile=/dev/null
+	StrictHostKeyChecking=no
+	AddKeysToAgent yes
+	IdentityFile ~/.ssh/SIA00000008-PCM2
+	IdentitiesOnly=yes
+	ProxyJump vm-rmsv
