--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = asdf/.asdf
 	url = https://github.com/asdf-vm/asdf.git
 	branch = v0.14.0
+[submodule "ssh/.ssh"]
+	path = ssh/.ssh
+	url = https://github.com/paul-m-kim/ssh.git
