--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -30,3 +30,14 @@ formatter = { command = "goimports" }
 name = "elixir"
 auto-format = true
 formatter = { command = "mix", args = ["format", "-"] }
+
+[[language]]
+name = "yaml"
+
+[language-server.yaml-language-server.config.yaml]
+format = { enable = true }
+validation = true
+
+[language-server.yaml-language-server.config.yaml.schemas]
+"https://raw.githubusercontent.com/ansible-community/schemas/main/f/ansible-tasks.json" = "roles/{tasks,handlers}/*.{yml,yaml}"
+
